<resources>
    <string name="app_name">Garra da Vida</string>
    <string name="entrar">Entrar</string>
    <string name="senha">Senha</string>
    <string name="cpf">CPF</string>
    <string name="email">Email</string>
    <string name="nome">Nome</string>
    <string name="text_cadastro">Crie uma conta clicando aqui</string>
    <string name="text_main_cadastro">Cadastre-se</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="tela_principal">Entrar sem login</string>
    <string name="sem_login">Sem login</string>
    <string name="esqueceu">Esqueceu a senha?</string>
    <string name="texto">Insira o seu email e enviaremos um link\npara você acessar a sua conta</string>
    <string name="botaum">Enviar link para login</string>
    <string name="pontuacao">0</string>
    <string name="doacao">0 Doação/Ano</string>
    <string name="agendar_doa">AGENDAR DOAÇÃO</string>
    <string name="agendar">AGENDAR</string>
    <string name="agendar_dois">Agendar</string>
    <string name="homens">Homens - 60 dias (máximo de 04 doações nos últimos 12 meses).</string>
    <string name="mulheres">Mulheres - 90 dias (máximo de 03 doações nos últimos 12 meses).</string>
    <string name="requisitos">Respeitar os intervalos para doação</string>
    <string name="saber_mais">Quer saber mais?</string>
    <string name="principais_impedimentos">Principais impedimentos temporários</string>
    <string name="resfriado">Resfriado (aguardar 7 dias após desaparecimento dos sintomas), gravidez, Amamentação (se o parto ocorreu há menos de 12 meses), Ingestão de bebida alcoólica nas 12 horas que antecedem a doação.</string>
    <string name="mostrar">Aqui mostramos alguns requisitos básicos. No entanto, esta lista não esgota aqui, de forma que outras informações prestadas por você durante a triagem clínica serão consideradas para definir se está apto para doar sangue nesse momento.</string>
    <string name="cartao">Cartão Doador</string>
    <string name="tipo_sangue">Tipo sanguíneo</string>
    <string name="data">00/00/00</string>
    <string name="sanguineo">Sanguíneo</string>
    <string name="doador_desde">Doador Desde</string>
    <string name="cpf_usuario">CPF do Usuário</string>
    <string name="usuario">Usuário</string>
    <string name="selecione_tipo_sangue">Selecione seu tipo sanguíneo</string>
    <string name="agendamento">Agendamento</string>
    <string name="escolha_data">Escolha uma data</string>
    <string name="escolha_hora">Escolha um horário</string>
    <string name="escolha_local">Escolha o local da doação</string>
    <string name="hospital_americana">Hospital de Americana</string>
    <string name="hospital_santa">Hospital de Santa Barbara D Oeste</string>
    <string name="icon_deslogar">Botão para deslogar</string>
    <string name="icon_home">Botão para a tela inicial</string>
    <string name="icon_perfil_card">Foto do perfil</string>
    <string name="icon_lembrete">Botão para a tela de lembrete</string>
    <string name="icon_perfil">Foto do perfil</string>
    <string name="icon_info">Botão para a tela de informações</string>
    <string name="icon_conquista">Botão para a tela de conquista</string>
    <string name="icon_agendamento">Botão para a tela de agendamento</string>
    <string name="imagem_requisitos">Ver os requisitos básicos</string>
    <string name="imagem_produtos">Produtos</string>
    <string name="imagem_texugo">Imagem Mascote</string>
    <string name="imagem">Imagem</string>
    <string name="ver_recompensas">Ver Recompensas</string>
    <string name="pontos">Pontos</string>
    <string name="destaques">Destaques</string>
    <string name="imagem_recuperar">Imagem</string>
    <string name="problemas_recuperar">Problemas para entrar?</string>
    <string name="voltar_recuperar">Voltar tela de login</string>
    <string name="criar_recuperar">Criar nova conta</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="frase_motivacional">Doar sangue é sempre importante!</string>
    <string name="abrir_local">Abrir local no mapa</string>
    <string name="desagedar">Desagendar doação</string>
</resources>