<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".Informacoes">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/requisitos"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_margin="40dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/homens"
                android:textSize="19sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_margin="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mulheres"
                android:textSize="19sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_margin="10dp" />


            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="wrap_content"
                android:layout_height="600dp"
                android:layout_margin="1dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintBaseline_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/info_basic"
                tools:layout_editor_absoluteY="16dp"
                android:contentDescription="@string/imagem_requisitos"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/principais_impedimentos"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/resfriado"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mostrar"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="18sp" />

            </LinearLayout>

            <Button
                android:id="@+id/saber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/saber_mais"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:cornerRadius="15dp"
                android:layout_margin="40dp" />

        </LinearLayout>
    </ScrollView>

    <!-- Botões adicionados -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp">

        <ImageView
            android:id="@+id/home"
            android:layout_width="57dp"
            android:layout_height="52dp"
            android:src="@drawable/ic_home"
            android:contentDescription="@string/icon_home"/>

        <Space
            android:layout_width="20dp"
            android:layout_height="match_parent" />

        <ImageView
            android:id="@+id/informacoes"
            android:layout_width="56dp"
            android:layout_height="55dp"
            android:src="@drawable/ic_info"
            android:contentDescription="@string/icon_info"/>

        <Space
            android:layout_width="20dp"
            android:layout_height="match_parent" />

        <ImageView
            android:id="@+id/conquista"
            android:layout_width="58dp"
            android:layout_height="55dp"
            android:src="@drawable/ic_trofeu"
            android:contentDescription="@string/icon_conquista"
            />

        <Space
            android:layout_width="20dp"
            android:layout_height="match_parent" />

        <ImageView
            android:id="@+id/agendamento"
            android:layout_width="57dp"
            android:layout_height="58dp"
            android:src="@drawable/ic_agendamento"
            android:contentDescription="@string/icon_agendamento"/>

        <Space
            android:layout_width="20dp"
            android:layout_height="match_parent" />

        <ImageView
            android:id="@+id/lembrete"
            android:layout_width="53dp"
            android:layout_height="54dp"
            android:src="@drawable/ic_lembrete"
            android:contentDescription="@string/icon_lembrete"/>
    </LinearLayout>

</LinearLayout>