<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#BC1823"
    tools:context=".Agendamentos">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Conteúdo dentro do ScrollView -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/agendamento"
                android:textSize="25sp"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_margin="40dp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                app:cardBackgroundColor="@android:color/black">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/escolha_data"
                    android:textSize="18sp"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_margin="10dp" />

            </androidx.cardview.widget.CardView>

            <DatePicker
                android:id="@+id/calendario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:calendarViewShown="false"
                android:datePickerMode="spinner" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                app:cardBackgroundColor="@android:color/black">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/escolha_hora"
                    android:textSize="18sp"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_margin="10dp" />

            </androidx.cardview.widget.CardView>

            <TimePicker
                android:id="@+id/horario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:timePickerMode="spinner" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/escolha_local"
                android:textSize="18sp"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:layout_margin="20dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp">

                <CheckBox
                    android:id="@+id/doacao1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hospital_americana"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp">

                <CheckBox
                    android:id="@+id/doacao2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hospital_santa"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:textSize="18sp" />

            </LinearLayout>

            <!-- Botão Agendar -->
            <Button
                android:id="@+id/agendar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/agendar"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:cornerRadius="15dp"
                android:layout_margin="40dp" />

        </LinearLayout>
    </ScrollView>

    <!-- Botões adicionados -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp">

        <ImageView
            android:id="@+id/home"
            android:layout_width="57dp"
            android:layout_height="52dp"
            android:src="@drawable/ic_home"
            android:contentDescription="@string/icon_home"
            />

        <Space
            android:layout_width="20dp"
            android:layout_height="match_parent" />

        <ImageView
            android:id="@+id/informacoes"
            android:layout_width="56dp"
            android:layout_height="55dp"
            android:src="@drawable/ic_info"
            android:contentDescription="@string/icon_info"/>

        <Space
            android:layout_width="20dp"
            android:layout_height="match_parent" />

        <ImageView
            android:id="@+id/conquista"
            android:layout_width="58dp"
            android:layout_height="55dp"
            android:src="@drawable/ic_trofeu"
            android:contentDescription="@string/icon_conquista"
            />

        <Space
            android:layout_width="20dp"
            android:layout_height="match_parent" />

        <ImageView
            android:id="@+id/agendamento"
            android:layout_width="57dp"
            android:layout_height="58dp"
            android:src="@drawable/ic_agendamento"
            android:contentDescription="@string/icon_agendamento"
            />

        <Space
            android:layout_width="20dp"
            android:layout_height="match_parent" />

        <ImageView
            android:id="@+id/lembrete"
            android:layout_width="53dp"
            android:layout_height="54dp"
            android:src="@drawable/ic_lembrete"
            android:contentDescription="@string/icon_lembrete"/>
    </LinearLayout>

</LinearLayout>